--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".TeamListActivity"
+                  android:label="@string/app_name"
+                  android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
